# Japanese-Alphabet

./: .gitignore  BUILD_WINDOWS.md  README.md  hiragana_quiz.py  hiragana_quiz_backup.py  japanese_alphabet_quiz_prefs.json  mingw-w64-toolchain.cmake  words.txt
japanese-alphabet-quiz/: AlphabetData.cpp  AlphabetData.h  CMakeLists.txt  FeedbackDialog.cpp  FeedbackDialog.h  MainMenuDialog.cpp  MainMenuDialog.h  ProfileDialog.cpp  ProfileDialog.h  QuizGame.cpp  QuizGame.h  QuizWindow.cpp  QuizWindow.h  README.md  VocabularyData.cpp  VocabularyData.h  VocabularyQuizWindow.cpp  VocabularyQuizWindow.h  VocabularyResultsDialog.cpp  VocabularyResultsDialog.h  VocabularySelectionDialog.cpp  VocabularySelectionDialog.h  WordSelectionDialog.cpp  WordSelectionDialog.h  install-desktop-icon.sh  japanese-alphabet-quiz.desktop  main.cpp  package.bat  resources.qrc  sample_vocabularies.json  sample_vocabularies.json.backup
